--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
     defer-datasource-initialization: 'true'
     hibernate:
       ddl-auto: create-drop
+server:
+  servlet:
+    context-path: /api
