--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       path: /h2-console
   datasource:
     username: sa
-    url: jdbc:h2:mem:testdb;Mode=Oracle
+    url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     password: ''
   jpa:
